--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form>
+        <input type="text" name="search-product-4">
+    </form>
 </body>
 </html>
